# TemplateProject

./: CMakeLists.txt  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  LICENSE  README.md
Creators/: CMakeLists.txt  README.md
Creators/Common/: Common.cmake
Creators/Common/Includes/: ACreator.h  ICreator.h  SimpleGlob.h
Creators/Common/Sources/: ACreator.cpp
Creators/CppConsole/: CMakeLists.txt
Creators/CppConsole/Includes/: CppConsole.h
Creators/CppConsole/Includes/Logger/: Manager.h
Creators/CppConsole/Lib/ArgParser/: ArgParser.h
Creators/CppConsole/Lib/ArgParser/CMake/: safeguards.cmake
Creators/CppConsole/Lib/Logger/Includes/: Channel.h  Config.h  Output.h  OutputDebug.h
Creators/CppConsole/Lib/Logger/Sources/: DateTime.cpp  OutputDebug.cpp  OutputFile.cpp
Creators/CppConsole/Lib/embed-resource/: CMakeLists.txt
Creators/CppConsole/Sources/: CppConsole.cpp
Creators/CppConsole/Template/: CMakeLists.txt  test2.c
Creators/CppConsole/Template/Includes/: IMain.h  MainClass.h
Creators/CppConsole/Template/Lib/Logger/Includes/: Log.h
Creators/CppConsole/Template/Sources/: MainClass.cpp  main.cpp
Creators/CppLibrary/: CMakeLists.txt
Creators/CppLibrary/Includes/: ProjectCreator.h
Creators/CppLibrary/Includes/Logger/: Exception.h  LoggerCpp.h  OutputDebug.h
Creators/CppLibrary/Lib/ArgParser/Sources/: ArgParser.cpp
Creators/CppLibrary/Sources/: ProjectCreator.cpp
Creators/CppLibrary/Template/: CMakeLists.txt
Creators/CppLibrary/Template/Includes/ArgParser/: ArgParser.h
Creators/CppLibrary/Template/Lib/Logger/Sources/: OutputConsole.cpp
Creators/CppLibrary/Template/Sources/: CppLibrary.cpp
Creators/CppSharedLibrary/: CMakeLists.txt
Creators/CppSharedLibrary/Includes/: ProjectCreator.h
Creators/CppSharedLibrary/Sources/: ProjectCreator.cpp
Creators/CppSharedLibrary/Template/: CMakeLists.txt
Creators/CppSharedLibrary/Template/Includes/: CppLibrary.h
Creators/CppSharedLibrary/Template/Lib/Logger/Includes/: shared_ptr.hpp
Creators/ProjectCreator/: CMakeLists.txt
Creators/ProjectCreator/Includes/: ProjectCreator.h
Creators/ProjectCreator/Includes/Logger/: OutputFile.h
Creators/ProjectCreator/Lib/ArgParser/: CMakeLists.txt
Creators/ProjectCreator/Lib/Logger/Includes/: Logger.h
Creators/ProjectCreator/Sources/: ProjectCreator.cpp
Creators/ProjectCreator/Template/: CMakeLists.txt
Creators/ProjectCreator/Template/Includes/: ProjectCreator.h
Creators/ProjectCreator/Template/Lib/Logger/: CMakeLists.txt
Creators/ProjectCreator/Template/Lib/Logger/Includes/: OutputConsole.h
Creators/ProjectCreator/Template/Lib/Logger/Sources/: Logger.cpp  Manager.cpp
Creators/ProjectCreator/Template/Sources/: ProjectCreator.cpp
Includes/: AClass.h  AMain.h  ArgParser  CreatorLoader.h  ExecutablePath.h  IClass.h  IMain.h  MainClass.h
Lib/ArgParser/: CMakeLists.txt
Lib/ArgParser/Includes/: ArgParser.h
Lib/ArgParser/Sources/: Config.cpp
Lib/Logger/Includes/: Includes
Lib/Logger/Sources/: Config.cpp  Log.cpp  OutputDebug.cpp
Sources/: AClass.cpp  AMain.cpp  CreatorLoader.cpp  ExecutablePath.cpp  MainClass.cpp  main.cpp
