cmake_minimum_required(VERSION 3.9)

# add all the executable CMakeList
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CppConsole)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CppLibrary)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/CppSharedLibrary)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ProjectCreator)
